# xwformats

./: .gitignore  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  FINAL_COMPLIANCE_REPORT.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  XWFORMATS_COMPLETE_FIX_GUIDE.md  pyproject.toml  pyproject.xwformats.toml  pytest.ini  requirements.txt  xwlazy.lock.toml  xwlazy_sbom.toml
.archieve/xwformats-main/: pyproject.toml  pytest.ini  requirements.txt
.archieve/xwformats-main/.github/workflows/: publish.yml
.archieve/xwformats-main/docs/: GUIDE_01_USAGE.md  REF_01_REQ.md  REF_14_DX.md  REF_15_API.md
.archieve/xwformats-main/docs/_archive/: KNOWN_ISSUES.md
.archieve/xwformats-main/docs/changes/: XWFORMATS_COMPLETE_FIX_GUIDE.md
.archieve/xwformats-main/docs/logs/reviews/: REVIEW_20250107_FORMAT_ANALYSIS.md  REVIEW_20250107_FORMAT_COMPARISON.md  REVIEW_20250107_LANGUAGE_SPECIFIC_FORMATS.md
.archieve/xwformats-main/docs/logs/setup/: ROCKSDB_WINDOWS_BUILD.md
.archieve/xwformats-main/docs/logs/tests/: TEST_20260110_2129_SUMMARY.md  TEST_20260128_0610_SUMMARY.md  TEST_20260128_0611_SUMMARY.md  TEST_20260128_0612_SUMMARY.md  TEST_20260128_0618_SUMMARY.md  TEST_20260128_0625_SUMMARY.md  TEST_20260128_0626_SUMMARY.md
.archieve/xwformats-main/docs/tests/: TEST_20260314_053859_469_SUMMARY.md
.archieve/xwformats-main/src/exonware/: __init__.py
.archieve/xwformats-main/src/exonware/xwformats/: __init__.py  base.py  config.py  contracts.py  defs.py  errors.py  facade.py
.archieve/xwformats-main/src/exonware/xwformats/formats/: __init__.py
.archieve/xwformats-main/src/exonware/xwformats/formats/binary/: __init__.py  bson.py  postcard.py
.archieve/xwformats-main/src/exonware/xwformats/formats/database/: rocksdb.py
.archieve/xwformats-main/src/exonware/xwformats/formats/schema/: arrow.py  avro.py  flatbuffers.py  orc.py  parquet.py  thrift.py
.archieve/xwformats-main/tests/: conftest.py
.archieve/xwformats-main/tests/0.core/: test_import.py
.archieve/xwformats-main/tests/1.unit/: conftest.py
.archieve/xwformats-main/tests/1.unit/formats_tests/binary_tests/: test_bincode.py  test_dill.py  test_ubjson.py
.archieve/xwformats-main/tests/1.unit/formats_tests/schema_tests/: __init__.py  test_arrow.py  test_parquet.py
.archieve/xwformats-main/tests/1.unit/formats_tests/scientific_tests/: test_netcdf.py
.archieve/xwformats-main/tests/1.unit/formats_tests/text_tests/: __init__.py
.archieve/xwformats-main/tests/2.integration/: runner.py
.archieve/xwformats-main/tests/2.integration/scenarios/: __init__.py
.archieve/xwformats-main/tests/3.advance/: test_performance.py  test_security.py
.github/: workflows-config.yaml
.github/workflows/: check-versions.yml  publish.yml
docs/: GUIDE_01_USAGE.md  INDEX.md  README.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
docs/_archive/: CRITICAL_FIXES_APPLIED.md  KNOWN_ISSUES.md  README.md  XWFORMATS_COMPLETE_FIX_GUIDE.md
docs/changes/: CRITICAL_FIXES_APPLIED.md  KNOWN_ISSUES.md
docs/logs/: REVIEW_SUMMARY.md
docs/logs/feedback/: INDEX.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
docs/logs/tests/: INDEX.md  TEST_20260110_2132_SUMMARY.md  TEST_20260128_0620_SUMMARY.md  TEST_20260128_0621_SUMMARY.md  TEST_20260128_0623_SUMMARY.md  TEST_20260128_0624_SUMMARY.md  TEST_20260208_134137_805_SUMMARY.md  TEST_20260307_041729_259_SUMMARY.md  TEST_20260318_081642_309_SUMMARY.md  TEST_20260318_082907_046_SUMMARY.md  TEST_20260318_083228_478_SUMMARY.md  TEST_20260318_083502_311_SUMMARY.md  TEST_20260318_084856_426_SUMMARY.md  TEST_20260318_213646_120_SUMMARY.md  TEST_20260318_213909_489_SUMMARY.md  TEST_20260322_170033_825_SUMMARY.md  TEST_20260326_224711_094_SUMMARY.md  TEST_20260327_224502_168_SUMMARY.md  TEST_20260408_143733_987_SUMMARY.md
docs/tests/: README.md  TEST_20260313_023125_181_SUMMARY.md  TEST_20260313_024107_414_SUMMARY.md  TEST_20260314_054049_066_SUMMARY.md  TEST_20260318_083033_139_SUMMARY.md  TEST_20260318_083312_142_SUMMARY.md  TEST_20260318_213521_918_SUMMARY.md  TEST_20260318_213555_856_SUMMARY.md  TEST_20260319_014045_497_SUMMARY.md  TEST_20260322_165741_516_SUMMARY.md
examples/: README.md
src/: xwformats.py  xwformats_wrapper.py
src/exonware/xwformats/: __init__.py  base.py  config.py  contracts.py  converter.py  defs.py  errors.py  facade.py  version.py
src/exonware/xwformats/formats/: __init__.py
src/exonware/xwformats/formats/binary/: __init__.py  bincode.py  bson.py  dill.py  postcard.py  ubjson.py
src/exonware/xwformats/formats/database/: __init__.py  graphdb.py  leveldb.py  lmdb.py  rocksdb.py
src/exonware/xwformats/formats/schema/: __init__.py  arrow.py  avro.py  capnproto.py  flatbuffers.py  orc.py  parquet.py  protobuf.py  thrift.py
src/exonware/xwformats/formats/scientific/: __init__.py  feather.py  hdf5.py  mat.py  netcdf.py  zarr.py
src/exonware/xwformats/formats/text/: __init__.py  csv.py  ron.py  toml.py  xml.py  yaml.py
tests/: conftest.py  runner.py
tests/0.core/: __init__.py  conftest.py  runner.py  test_import.py  xwlazy.lock.toml  xwlazy_sbom.toml
tests/1.unit/: __init__.py  runner.py  xwlazy.lock.toml  xwlazy_sbom.toml
tests/1.unit/formats_tests/: test_serializers_basic.py
tests/1.unit/formats_tests/binary_tests/: test_bincode.py  test_dill.py  test_postcard.py  test_ubjson.py
tests/1.unit/formats_tests/database_tests/: test_leveldb.py  test_rocksdb.py
tests/1.unit/formats_tests/schema_tests/: test_arrow.py  test_parquet.py
tests/1.unit/formats_tests/scientific_tests/: test_mat.py  test_netcdf.py
tests/1.unit/formats_tests/text_tests/: test_csv.py  test_ron.py  test_toml.py  test_yaml.py
tests/2.integration/: __init__.py  conftest.py  test_end_to_end.py  xwlazy.lock.toml  xwlazy_sbom.toml
tests/2.integration/scenarios/: test_format_conversion_workflows.py
tests/3.advance/: __init__.py  runner.py  xwlazy.lock.toml  xwlazy_sbom.toml
(+4 files in other folders)
