
# Source size (src/*): ~191.0 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwformats"
  dynamic = ["version"]
  description = "Enterprise serialization formats for xwsystem - Parquet, Avro, HDF5, NetCDF, and 14 more heavyweight formats"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = []
  classifiers = []
  dependencies = []
  exonware-xwsystem = "2758230 ; 2.63 MB"
  authors = []
  "{ name" = "eXonware Backend Team"

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    lazy = []
    exonware-xwlazy = "349706 ; 0.33 MB"
    "exonware-xwsystem[lazy]" = "3103784 ; 2.96 MB"
    dev = []
    "black>" = "23.0.0\",  # file-size=3914855 ; 3.73 MB"
    "exonware-xwsystem[dev]" = "40632320 ; 38.75 MB"
    "isort>" = "5.12.0\",  # file-size=568232 ; 0.54 MB"
    "mypy>" = "1.0.0\",  # file-size=29775254 ; 28.40 MB"
    "pytest>" = "7.0.0\",  # file-size=3152415 ; 3.01 MB"
    "pytest-asyncio>" = "0.21.0\",  # file-size=46752 ; 0.04 MB"
    "pytest-cov>" = "4.0.0\",  # file-size=71639 ; 0.07 MB"
    full = ["pyarrow>=8.0.0", "numpy>=1.20.0", "cloudpickle", "thrift>=0.15.0", "pyorc>=0.6.0", "pycapnp>=1.1.0", "flatbuffers>=2.0.0", "pandas>=1.3.0", "pytz", "numexpr", "bottleneck", "lmdb>=1.4.0", "attrs2bin", "dill", "pypostcard", "py-ubjson>=0.16.0", "h5py>=3.8.0", "zarr>=2.15.0", "pcodec", "fsspec", "isal", "python-snappy", "lz4", "netCDF4>=1.6.0", "scipy>=1.7.0", "cython", "charset-normalizer", "threadpoolctl", "ron", "tomli", "substrait"]
    aiofiles = "81991 ; 0.08 MB"
    attrs = "440438 ; 0.42 MB"
    "attrs2bin>" = "0.0.1\",  # file-size=32002 ; 0.03 MB"
    bcrypt = "329770 ; 0.31 MB"
    bottleneck = "460187 ; 0.44 MB"
    brotli = "868889 ; 0.83 MB"
    cachebox = "971831 ; 0.93 MB"
    cachetools = "105183 ; 0.10 MB"
    cbor2 = "406858 ; 0.39 MB"
    charset-normalizer = "580726 ; 0.55 MB"
    cloudpickle = "125961 ; 0.12 MB"
    cramjam = "4216190 ; 4.02 MB"
    cryptography = "10265860 ; 9.79 MB"
    cython = "13606517 ; 12.98 MB"
    dicttoxml = "96721 ; 0.09 MB"
    "dill>" = "0.3.0\",  # file-size=822194 ; 0.78 MB"
    "exonware-xwsystem[full]" = "83665879 ; 79.79 MB"
    "fastavro>" = "1.4.0\",  # file-size=1404618 ; 1.34 MB"
    "flatbuffers>" = "2.0.0\",  # file-size=156467 ; 0.15 MB"
    fsspec = "1655173 ; 1.58 MB"
    google = "66934 ; 0.06 MB"
    "h5py>" = "3.8.0\",  # file-size=8283484 ; 7.90 MB"
    httpx = "765633 ; 0.73 MB"
    hyperlight_hyperjson = "261754 ; 0.25 MB"
    isal = "569869 ; 0.54 MB"
    json5 = "377396 ; 0.36 MB"
    "lmdb>" = "1.4.0\",  # file-size=399680 ; 0.38 MB"
    lz4 = "277804 ; 0.26 MB"
    msgpack = "238387 ; 0.23 MB"
    msgspec = "525449 ; 0.50 MB"
    "netCDF4>" = "1.6.0\",  # file-size=55631969 ; 53.05 MB"
    numexpr = "742653 ; 0.71 MB"
    "numpy>" = "1.20.0\",  # file-size=52803492 ; 50.36 MB"
    opentelemetry-api = "423339 ; 0.40 MB"
    orjson = "289443 ; 0.28 MB"
    "pandas>" = "1.3.0\",  # file-size=67223490 ; 64.11 MB"
    pcodec = "1021146 ; 0.97 MB"
    psutil = "2104166 ; 2.01 MB"
    "py-ubjson>" = "0.16.0\",  # file-size=147808 ; 0.14 MB"
    "pyarrow>" = "8.0.0\",  # file-size=90047710 ; 85.88 MB"
    "pycapnp>" = "1.1.0\",  # file-size=3450539 ; 3.29 MB"
    pylru = "74244 ; 0.07 MB"
    pymongo = "6208897 ; 5.92 MB"
    "pyorc>" = "0.6.0\",  # file-size=2468634 ; 2.35 MB"
    "pypostcard>" = "0.1.0\",  # file-size=33211 ; 0.03 MB"
    python-snappy = "43189 ; 0.04 MB"
    pytz = "1081137 ; 1.03 MB"
    PyYAML = "730195 ; 0.70 MB"
    rich = "2130726 ; 2.03 MB"
    "scipy>" = "1.7.0\",  # file-size=140860699 ; 134.34 MB"
    substrait = "1508525 ; 1.44 MB"
    threadpoolctl = "125347 ; 0.12 MB"
    "thrift>" = "0.15.0\",  # file-size=861988 ; 0.82 MB"
    tomli = "288072 ; 0.27 MB"
    tomli-w = "25350 ; 0.02 MB"
    xmltodict = "65213 ; 0.06 MB"
    "zarr>" = "2.15.0\",  # file-size=2847367 ; 2.72 MB"
    zstandard = "1384115 ; 1.32 MB"

[tool]

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwformats/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwformats"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
