
# Source size (src/*): ~191.1 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwformats"
  dynamic = ["version"]
  description = "Enterprise serialization formats for xwsystem - Parquet, Avro, HDF5, NetCDF, and 14 more heavyweight formats"
  readme = "README.md"
  requires-python = ">=3.8"
  keywords = []
  classifiers = []
  dependencies = [
    "exonware-xwsystem",
  ]
  authors = [
    {name = "Eng. Muhammad AlShehri", email = "connect@exonware.com"},
  ]

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    lazy = []
    dev = [
      "black>=23.0.0",
      "isort>=5.12.0",
      "mypy>=1.0.0",
      "pytest>=7.0.0",
      "pytest-asyncio>=0.21.0",
      "pytest-cov>=4.0.0",
    ]
    full = [
      "ron",
      "attrs>=22.0.0",
      "attrs2bin>=0.0.1",
      "dill>=0.3.6",
      "fastavro>=1.4.0",
      "flatbuffers>=2.0.0",
      "h5py>=3.8.0",
      "lmdb>=1.4.0",
      "lxml>=4.9.0",
      "neo4j>=4.4.0",
      "netCDF4>=1.6.0",
      "numpy>=1.20.0",
      "pandas>=1.3.0",
      'plyvel>=1.5.0; sys_platform != "win32"',
      "protobuf>=3.19.0",
      "pyarrow>=8.0.0",
      "pycapnp>=1.1.0",
      "pydgraph>=21.3.0",
      "pyorc>=0.6.0",
      "pypostcard>=0.1.0",
      "py-ubjson>=0.16.0",
      "pymongo>=4.0.0",
      'python-rocksdb>=0.7.0; sys_platform != "win32"',
      "scipy>=1.7.0",
      "serde>=0.7.0",
      "thrift>=0.15.0",
      "zarr>=2.15.0",
      "zope.interface>=6.0",
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwformats"
    Documentation = "https://github.com/exonware/xwformats#readme"

[tool]

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwformats/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwformats"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
