# Source size (src/*): ~156.4 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwformats"
dynamic = ["version"]
description = "Heavyweight serialization formats for xwsystem (schema, scientific, database, binary, RON). CSV/JSON/TOML/YAML/XML, BSON, and other core xwsystem codecs are not registered by this package"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
  "serialization",
  "parquet",
  "avro",
  "hdf5",
  "netcdf",
  "protobuf",
  "thrift",
  "scientific",
  "enterprise",
  "formats",
  "exonware",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "exonware-xwsystem",
]

[[project.authors]]
name = "Eng. Muhammad AlShehri"
email = "connect@exonware.com"

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem; see lazy/full).
xw = []
lazy = [
  "exonware-xwformats[xw]",
  "exonware-xwlazy",
  "exonware-xwsystem[lazy]",
]
full = [
  "exonware-xwformats[xw]",
  "exonware-xwsystem[full]",
  # Schema formats (7 formats)
  "fastavro>=1.4.0",
  "protobuf>=3.19.0",
  "thrift>=0.15.0",
  "pyarrow>=8.0.0",
  "pandas>=1.3.0",
  "pyorc>=0.6.0",
  "pycapnp>=1.1.0",
  "flatbuffers>=2.0.0",
  # Scientific formats (5 formats)
  "h5py>=3.8.0",
  "zarr>=2.15.0",
  "netCDF4>=1.6.0",
  "scipy>=1.7.0",
  "numpy>=1.20.0",
  # Database formats (3 formats)
  "lmdb>=1.4.0",
  "neo4j>=4.4.0",
  "pydgraph>=21.3.0",
  "plyvel>=1.5.0",
  # Binary formats (2 formats)
  "py-ubjson>=0.16.0",
  # Text formats (XML enterprise - 1 format)
  "lxml>=4.9.0",
]
dev = [
  "exonware-xwformats[full]",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwformats"
Documentation = "https://github.com/exonware/xwformats#readme"

[tool.hatch.version]
path = "src/exonware/xwformats/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwformats"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
